Fix : [général] Title du site [général] Barre de navigation fonctionnelle [slider] Ordre de défilement correct [slider] Suppression de la page blanche [slider] Boutons radio fonctionnels [slider] Affichage du bon mois [Nos réalisation] Affichage du bon mois [Formulaire de contact] Message de confirmation d'envoie fonctionnel [Nos réalisation] Affichage de la vignette du dernier événements Correction de l'erreur console : Unsupported style property font-family. Did you mean fontFamily? Correction de l'erreur console : Unsupported style property font-size. Did you mean fontSize? Correction de l'erreur console : Unsupported style property font-weight. Did you mean fontWeight? Correction de l'erreur console : Unsupported style property white-space. Did you mean whiteSpace? Correction de l'erreur console : Uncaught TypeError: can't access property "length", byDateDesc is undefined. Correction de l'erreur console : Each child in a list should have a unique "key" prop. Check the render method of `Slider`. Correction de l'erreur console : Encountered two children with the same key, `undefined`. Keys should be unique so that components maintain their identity across updates. Correction de l'erreur console : Warning: You provided a `checked` prop to a form field without an `onChange` handler. This will render a read-only field. If the field should be mutable use `defaultChecked`. Otherwise, set either `onChange` or `readOnly`

--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -153,6 +153,12 @@ footer {
     }
   }
 
+  .EventCard__imageContainer img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+  }
+
   .presta {
     width: 35%;
     border-right: 1px solid rgba(91, 50, 255, 0.2);
